# rusty-minesweeper

./: Cargo.toml  README.md  build.sh
.github/workflows/: test.yml
assets/: icon.icns
src/: app.rs  main.rs
src/game/: board.rs  cell.rs  mod.rs
src/game_manager/: difficulty.rs  manager.rs  mod.rs
src/theme/: mod.rs  palette.rs  style.rs
src/timer/: game_timer.rs  mod.rs
src/ui/: board.rs  mod.rs  overlays.rs  welcome.rs
src/utils/: debug.rs  mod.rs  time.rs
